--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -6,6 +6,14 @@
   margin: 0 18px 0 30px;
 }
 
+@media (max-width: 1024px) {
+
+  .profile__info {
+    margin: 0 0 0 30px;
+  }
+
+}
+
 @media (max-width: 768px) {
 
   .profile__info {
