--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -6,17 +6,23 @@
   /*Типографика*/
   font-size: 42px;
   font-weight: 500;
-  line-height: 48px;
+  line-height: 1.2;
+  max-width: 15ch;
+
+  /*Переполнение блока*/
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 
 @media (max-width: 768px) {
 
   .profile__title {
-    margin-left: 20px;
+    margin-left: 18px;
 
     font-size: 27px;
-    line-height: 26px;
+    line-height: 1.1;
   }
 
 }
