--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -16,6 +16,9 @@
 @media (max-width: 1024px) {
 
   .profile {
+    /*Вертикальное для планшетов*/
+    flex-direction: column;
+
     width: 581px;
   }
 
